--- a/client/my-sites/checkout/composite-checkout/components/payment-method-tax-info/style.scss
+++ b/client/my-sites/checkout/composite-checkout/components/payment-method-tax-info/style.scss
@@ -18,3 +18,8 @@ button.button.payment-method-tax-info__edit-button svg.gridicon {
 .payment-method-tax-info__address {
 	margin-right: 0.5em;
 }
+
+.payment-method-tax-info {
+	display: flex;
+	align-items: center;
+}
