Make payment method delete button look like a link

--- a/client/me/purchases/payment-methods/style.scss
+++ b/client/me/purchases/payment-methods/style.scss
@@ -82,6 +82,10 @@
 	font-size: 0.875rem;
 }
 
+.payment-method-delete {
+	text-decoration: underline;
+}
+
 .payment-method-delete-dialog {
 	&.dialog {
 		max-width: 440px;
