Add additional space between items in edit section

--- a/client/me/purchases/payment-methods/style.scss
+++ b/client/me/purchases/payment-methods/style.scss
@@ -115,7 +115,7 @@
 .payment-method__edit-payment-method {
 	margin-bottom: 0;
 	display: flex;
-	justify-content: space-evenly;
+	justify-content: space-around;
 }
 
 /* Jetpack cloud overwrites */
