--- a/client/blocks/inline-help/inline-help-center-content.scss
+++ b/client/blocks/inline-help/inline-help-center-content.scss
@@ -2,29 +2,27 @@
 @import 'calypso/assets/stylesheets/shared/mixins/_breakpoints';
 @import 'calypso/assets/stylesheets/shared/mixins/hide-content-accessibly';
 
-
 .inline-help-center__content {
 	background-color: var( --color-surface );
 
-    &:not( .is-secondary-view-richresult ) {
-        p {
-            font-size: $font-body-extra-small;
-    
-            @include breakpoint-deprecated( '>660px' ) {
-                font-size: $font-body-small;
-            }
-        }
-    
-        a,
-        button {
-            font-size: $font-body-extra-small;
-    
-            @include breakpoint-deprecated( '>660px' ) {
-                font-size: $font-body-small;
-            }
-        }
-    }
-	
+	&:not( .is-secondary-view-richresult ) {
+		p {
+			font-size: $font-body-extra-small;
+
+			@include breakpoint-deprecated( '>660px' ) {
+				font-size: $font-body-small;
+			}
+		}
+
+		a,
+		button {
+			font-size: $font-body-extra-small;
+
+			@include breakpoint-deprecated( '>660px' ) {
+				font-size: $font-body-small;
+			}
+		}
+	}
 
 	&.is-secondary-view-active {
 		.inline-help__search {
@@ -129,25 +127,33 @@
 		.inline-help__resource-cell {
 			width: 100%;
 		}
-	
+
 		@include breakpoint-deprecated( '>660px' ) {
 			font-size: $font-title-small;
 			line-height: 1.3;
 		}
-	
-		a {
+
+		button {
+			width: 100%;
+			height: 100%;
+		}
+
+		a,
+		button {
 			color: #000;
 			text-decoration: none;
 			font-weight: normal;
 			line-height: 1.4;
 			display: flex;
 			align-items: center;
-	
+			padding: 0;
+			text-align: left;
+
 			span {
 				flex-grow: 2;
 			}
-	
-			.gridicon {
+
+			svg {
 				align-self: baseline;
 				background: var( --color-neutral-0 );
 				color: var( --color-neutral-light );
@@ -156,21 +162,21 @@
 				padding: 10px;
 				position: relative;
 			}
-	
+
 			&:hover {
 				cursor: pointer;
 				background: var( --color-neutral-0 );
-	
-				.gridicon {
+
+				svg {
 					color: var( --color-neutral );
 				}
 			}
-	
+
 			&:focus {
 				background: var( --color-primary );
 				color: var( --color-text-inverted );
-	
-				.gridicon {
+
+				svg {
 					color: var( --color-text-inverted );
 				}
 			}
